clean the project

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,5 +2,5 @@
 	"@metadata": {
 		"authors": []
 	},
-	"nsrels-desc": "Allows to define additional namespace tabs"
+	"nsdata-desc": "Create a Data tab for the main and user pages to open the pages in the Data and UserData namespace"
 }
