--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -6,5 +6,5 @@
 			"Umherirrender"
 		]
 	},
-	"nsrels-desc": "{{desc|name=Namespace Relations|url=https://www.mediawiki.org/wiki/Extension:NamespaceRelations}}"
+	"nsdata-desc": "{{desc|name=NamespaceData|url=https://www.mediawiki.org/wiki/Extension:NamespaceData}}"
 }
