--- a/README
+++ b/README
@@ -1,20 +1,21 @@
 == NamespaceData ==
 
-This extensions provides a way to define a data tab for main pages and user pages besides Subject and Talk tabs.
+The '''NamespaceData''' extension provides a way to define a data tab for main pages and user pages besides Subject and Talk tabs.
+Only users in the new Data user group can see this tab and can change the pages in the Data namespace.
 
-== Features ==
-* Add by default, a tab Data for main pages and user pages
-* No client-side scripting
-* Multiple tabs per root namespace (the one where new tabs are attached to)
-* Same-namespace custom tabs (via customTarget definition, see documentation)
-* Custom query parameters for non-existent targets (red-links)
-* Tab sorting
-* Optional Talk tab hiding; Allows to decide whether to show a tab on a Main Page
-* Localization via standard tabs l10n mechanism
+This extension is a fork of the [[Extension:NamespaceRelations|NamespaceRelations extension]].
+This extension is maintained at the same time as the [[Extension:LinkedWiki|LinkedWiki extension]].
 
-To enable this extension, please add the following line to your LocalSettings.php:
+== Use case ==
 
-wfLoadExtension( 'NamespaceData');
+[[Extension:LinkedWiki|LinkedWiki extension]] allows the tag <code>rdf</code> to write with RDF/Turtle directly in a page (their ontology or their SHACL rules, for example) but people prefer to separate natural language from RDF/Turtle in their wiki.
+
+== Installation ==
+In your {{ll|Manual:LocalSettings.php|LocalSettings.php}}, the following line inserts a new  tab Data on all main pages and user pages.  you can give the right to users to see or not this tab by inserting a user in the Data user group.
+
+<syntaxhighlight lang="php">
+wfLoadExtension( 'NamespaceData' );
+</syntaxhighlight>
 
 == External links ==
 If you have any concerns about this extension, please refer to it's documentation:
