--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -2,6 +2,12 @@ These are the release notes for the NamespaceData extension.
 
 Extension page on mediawiki.org: https://www.mediawiki.org/wiki/Extension:NamespaceData
 
+=== Version 2.0.1 ===
+2021-10-04
+
+* Remove the deprecated/internal functions
+* Fixes the dependency of namespaces with the LinkedWiki extension
+
 === Version 2.0.0 ===
 2021-08-06
 
